# sec-code-bench

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  config.ini  pyproject.toml
datasets/: source_repo.txt
datasets/static/: vulnerability_schema.yaml
datasets/static/jar_package/: dependencies.txt  (+1 more)
docs/: 508.d0ab2e747132c50686e3.js  508.ff2083bcd5d491239489.js  index.html  main.1760cb617ba6d88b73c2.js  main.666efd4a5c8e4376c564.js  main.ac909e53a47ad45c4755.js  main.e86a7489690fcd9e8d77.js  runtime.8ce0b3672d5dc47321d3.js  runtime.b62d22f10c26fbc492f9.js
docs/json/: leaderboard.json  model-test-summary.json  testcase_config.json
sec_code_bench/: eval_dynamic.py  eval_static.py
sec_code_bench/benchmark/: handler.py  statistics.py
sec_code_bench/checker/: base_checker.py  checker_factory.py
sec_code_bench/constants/: config.py  config_manager.py  eval_type.py  result_meta.py
sec_code_bench/evaluate/: base_consumer.py  request_job.py  resource_manager.py
sec_code_bench/llm/: llm_manager.py  openai.py  openai_responses.py
sec_code_bench/llms/: llm.py  openai.py
sec_code_bench/statistic/: pass_at_k_statistic.py
sec_code_bench/testers/: base_tester.py  maven_tester.py  security_monitor.py
sec_code_bench/utils/: basic_utils.py  fdisk_utils.py  http_utils.py  llm_utils.py  logger_utils.py  mark_utils.py  rate_limiter.py  testcase.py
tests/: conftest.py  test_basic.py  test_checker_factory.py  test_code_formatter.py  test_features.py  test_java_parser.py  test_java_parser_method_invoke.py  test_testcase_manager.py
(+4602 files in other folders)
