[project]
name = "sec-code-bench"
version = "0.1.0"
description = "A framework for evaluating security metrics of LLM-generated code"
authors = [

]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "backoff>=2.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.93.0",
    "requests>=2.31.0",
    "ruff>=0.12.2",
    "typing>=3.10.0.0",
    "jpype1==1.5.2",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-cpp>=0.23.4",
    "PyYAML>=6.0",
    "tzlocal>=5.3.1",
    "setuptools>=80.9.0",
    "pytest-asyncio>=1.0.0",
    "pandas>=2.3.1",
    "colorama>=0.4.6",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
